# UniMatch-University-Application-System

./: .gitignore  ACTIVITY_DIAGRAMS.md  ARCHITECTURE.md  ASSIGNMENT 6 AGILE PLAN.md  ASSIGNMENT5_REFLECTION.md  ASSIGNMENT_4_REFLECTION.md  ASSIGNMENT_7_REFLECTION.md  ASSIGNMENT_8_REFLECTION.md  ASSIGNMENT_9_REFLECTION.md  CHANGELOG.md  CLASS_DIAGRAM.md  CONTRIBUTIONS.md  CONTRIBUTION_PLAN.md  DOMAIN_MODEL.md  KANBAN_EXPLANATON.md  MERGED_PRS.md  PROTECTION.md  README.md  REFLECTION_15.md  SPECIFICATION.md  STAKEHOLDER_ANALYSIS.md  STATE_TRANSITION_DIAGRAMS.md  SYSTEM_REQUIREMENTS (Functional Section).md  SYSTEM_REQUIREMENTS (Non-Functional Section).md  SYSTEM_REQUIREMENTS_COMPLETE.md  TEMPLATE_ANALYSIS.md  TEST_CASES.md  USE_CASE_SPECIFICATIONS.md  docker-compose.yml  pyproject.toml  test_output.txt
.github/workflows/: ci.yml
ASSIGNMENT_11/: BACKLOG.md  README.md  application_services.py  conftest.py
ASSIGNMENT_11/factories/: __init__.py
ASSIGNMENT_11/tests/: test_application_services.py  test_repositories.py
ASSIGNMENT_11/unimatch/: __init__.py  entities.py  enums.py  status_history.py
ASSIGNMENT_12/: BACKLOG.md  CHANGELOG.md  Dockerfile  README.md  conftest.py  entities.py  main.py  repositories.py  repositories_inmemory.py  requirements.txt  status_history.py
creational_patterns/: __init__.py  abstract_factory.py  builder.py  factory_method.py  prototype.py  simple_factory.py  singleton.py
tests/: test_abstract_factory.py  test_builder.py  test_domain_entities.py  test_factory_method.py  test_prototype.py  test_simple_factory.py  test_singleton.py
(+9 files in other folders)
