[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unimatch"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
branch = true
source = ["src/unimatch", "creational_patterns"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 0
